# runweaver

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: manifest.d.ts
examples/: PRIMITIVES.md  future-hooks.example.ts  python-project.example.ts  target-config.example.ts
scripts/: bench-hot-path.py  generate-manifest-types.sh
src/: cli.rs  diagnostics.rs  lib.rs  prelude.rs  toolchain.rs
src/bindings/: mod.rs
src/config/: declarative.rs  file_targets.rs  manifest.rs  mod.rs  runweaver.rs  tasks.rs  validate.rs
src/core/: mod.rs  operation.rs
src/embedded/: cli.rs  compile.rs  fingerprint.rs  mod.rs
src/profiles/: agent_post_edit_feedback.rs  generated_file_guard.rs  mod.rs  stop_session_validation.rs
src/runtime/: context.rs  format.rs  mod.rs  operation_runner.rs  result.rs  task_runner.rs
src/services/: mod.rs
src/surfaces/: mod.rs  surface.rs
src/surfaces/agent_hooks/: agent_hooks_config.rs  agent_hooks_config_cli.rs  agent_hooks_main.rs  agents_surface.rs  app.rs  built_in_harnesses.rs  codecs.rs  command_prefix.rs  contract.rs  destructive_commands.rs  failure.rs  harness.rs  harness_hook_config.rs  hook_command.rs  inputs.rs  mod.rs  payload.rs  run_hook.rs  runtime.rs  task_hook.rs  tool_input.rs
tests/: generic_cli.rs  public_api.rs
